# skyphoenix-edgehub-linux

./: .gitignore  AGENTS.md  BACKLOG.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md
.aiassistant/: self-review.md
.aiassistant/rules/: 00-core-project.md  10-qt-qml-touch-ui.md  90-strict-review.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  distro.yml  docs.yml  supply-chain.yml
app/src/: autostart.cpp  autostart.h  config_bridge.h  control_server.cpp  control_server.h  control_socket_path.h  display_match.cpp  display_match.h  distro_bridge.h  license_bridge.h  main.cpp  metrics_worker.h  mpris_bridge.cpp  mpris_bridge.h  mpris_state.cpp  mpris_state.h  network_access_policy.h  orientation_sensor.cpp  orientation_sensor.h  single_instance.h  system_settings_probe.h  timezone_bridge.h  xeneon_string.h
assets/: fonts.qrc  icons.qrc  wallpapers.qrc  xeneon-edge-manager.desktop
assets/metainfo/: com.skyphoenix_it.XeneonEdgeHub.metainfo.xml  com.skyphoenix_it.XeneonEdgeManager.metainfo.xml
core/: Cargo.toml  deny.toml  xeneon_core.h
core/proptest-regressions/: ffi.txt
core/src/: config.rs  display.rs  distro.rs  ffi.rs  lib.rs  license.rs  logging.rs  metrics.rs  policy.rs  secrets.rs
docs/: BETA_PLAN.md  BUG_FIX_PLAN.md  DEV_AND_TEST_PLAN.md  DISTRIBUTION.md  LAUNCH_COPY.md  LICENSING.md  LICENSING_STRATEGY.md  MANAGER_UIUX_PLAN.md  MARKETING.md  SESSION_HANDOFF.md
docs/adr/: 0001-application-stack.md  0002-widget-runtime.md
docs/agent-memory/: MANDATE-gui-testsuite.md  MEMORY.md  SESSION-HANDOFF-2026-07-20.md  TEST-STRATEGY-v2.md  TODO-gui-testsuite.md  ci-setup.md  companion-and-testing.md  dashboard-architecture.md  feedback-run-location.md  gui-baseline-2026-07-19.txt  packaging.md  product-decisions.md  runtime-e2e-testing.md  v1-marketing-direction.md  v1-release-plan.md
docs/architecture/: overview.md
docs/development/: setup.md
docs/installation/: cachyos.md  generic-linux.md  ubuntu.md
docs/legal/: README.md  agb.md  datenschutz.md  impressum.md  widerruf.md
docs/marketing/: free-vs-pro.md
docs/marketing-site/: index.html  trailer.html
docs/product/: mvp-scope.md  personas.md  product-vision.md  use-cases.md  wireframes.md
docs/releases/: v1.0.0-alpha.2.md
docs/reports/: overnight-report.md
docs/security/: managed-config.md  supply-chain.md  threat-model.md  widget-permissions.md
docs/testing/: hardware-validation-2026-07-21.md  manager-display-safety-2026-07-22.md  post-merge-validation-2026-07-21.md  release-gate.md  release-media-validation-2026-07-21.md  test-strategy.md
docs/troubleshooting/: common-issues.md
docs/ux/: manager-audit-2026-07-16.md  manager-fixes-2026-07-18.md  walkthrough-2026-07-16.md
docs/widgets/: authoring.md  manifest-spec.md  manifest.schema.json  user-guide.md
manager/: manager.qrc
manager/qml/: EdgeClone.qml  Manager.qml  MockMedia.qml  WidgetConfigDialog.qml  qmldir
manager/src/: main.cpp  manager_backend.h  manager_display_policy.h  path_sanitize.h  reconcile.cpp  reconcile.h
packaging/: README.md
packaging/appimage/: build-appimage.sh
packaging/aur/: .SRCINFO  .gitignore  PKGBUILD  xeneon-edge-hub-1.0.0-alpha.2.tar.gz.sig
packaging/aur/src/XeneonEdge_Linux-1.0.0-alpha.2/core/: Cargo.toml  xeneon_core.h
packaging/aur/src/XeneonEdge_Linux-1.0.0-alpha.2/core/proptest-regressions/: license.txt
packaging/aur/src/XeneonEdge_Linux-1.0.0-alpha.2/core/src/: distro.rs  ffi.rs  license.rs  logging.rs  metrics.rs  policy.rs  secrets.rs
packaging/ci/: egress_seed_config.py  egress_sink.py  no-egress.sh  smoke-appimage.sh  smoke.sh
packaging/cpack/: generator-preflight.cmake
packaging/flatpak/: README.md  com.skyphoenix_it.XeneonEdgeHub.yml
packaging/local/: PKGBUILD  xeneon-edge-hub.install
packaging/udev/: 99-xeneon-edge.rules
scripts/: build.sh  capture-device.sh  capture_live_behavior.py  capture_live_orientation.py  check_appimage_update_contract.sh  check_cpack_contract.sh  check_doc_links.sh  check_live_tests.sh  check_no_manager_compositor_tests.sh  check_no_raw_xhr.sh  check_qml_diagnostics.sh  check_release_gate_contract.sh  check_tree_walks.py  check_ui_links.sh  check_widget_icons.sh  coverage.sh  gen_screenshots.py  gen_widgets.py  mint-license.sh  new-widget.sh  qml_coverage.py  release.sh  render_product_film.sh  run_all_tests.sh  run_cpp_tests.sh  run_hardware_python.py  run_manager_tests.sh  run_owner_key_release_test.sh  run_release_tests.sh  run_ui_tests.sh  setup-lemonsqueezy.py  update-local.sh
scripts/lib/: ctest_release_gate.sh  qml_test_result.sh  release_gate.sh  release_sequence.sh  run_bounded.sh
tests/cpp/: CMakeLists.txt  hermetic.h  tst_autostart.cpp  tst_config_bridge.cpp  tst_control_server.cpp  tst_display_match.cpp  tst_distro_bridge.cpp  tst_license.cpp  tst_manager_backend_sync.cpp  tst_manager_display_policy.cpp  tst_metrics_json.cpp  tst_metrics_worker.cpp  tst_mpris_state.cpp  tst_network_access_policy.cpp  tst_orientation_byte.cpp  tst_orientation_reopen.cpp  tst_path_sanitize.cpp  tst_policy.cpp  tst_reconcile.cpp  tst_rx_cap.cpp  tst_single_instance.cpp  tst_smoke_hub.cpp  tst_smoke_manager.cpp  tst_system_settings_probe.cpp  tst_timezone_bridge.cpp
tests/gui/: GuiUtil.js  ManagerHarness.qml  run_gui_tests.sh  runner.cpp  tst_gui_mgr_bg_glass_images.qml  tst_gui_mgr_edgeclone_screens_dialogs.qml  tst_gui_mgr_nav.qml  tst_gui_mgr_smoke.qml  tst_gui_mgr_theme_accent.qml  tst_gui_sample.qml  tst_gui_shell_nav_edit.qml  tst_gui_shell_orient_settings.qml  tst_gui_shell_wallpaper_presets.qml  tst_gui_util_walk.qml  tst_gui_w_cal_weather.qml  tst_gui_w_focus_core.qml  tst_gui_w_focus_habits.qml  tst_gui_w_focus_health.qml  tst_gui_w_hydration_volume.qml  tst_gui_w_media_data.qml  tst_gui_w_misc.qml  tst_gui_w_sys_a.qml  (+4 more)
tools/license-tool/: Cargo.toml
tools/license-tool/src/: lib.rs  main.rs
tools/license-tool/tests/: cli_security.rs
tools/license-webhook/: Cargo.toml  README.md
tools/license-webhook/src/: main.rs
ui/: qml.qrc
(+426 files in other folders)
