[package]
name = "xeneon-core"
version = "0.1.0"
edition = "2021"
description = "Core library for Xeneon Edge Linux Hub"

[lib]
name = "xeneon_core"
crate-type = ["staticlib", "lib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
libc = "0.2"

[dev-dependencies]
tempfile = "3"
proptest = "1"

